[package]
name = "futures_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "futures_1"
path = "src/futures_1.rs"

[[bin]]
name = "futures_2"
path = "src/futures_2.rs"

[[bin]]
name = "futures_3"
path = "src/futures_3.rs"

[dependencies]
futures = "0.3.28"
